--- a/mbs/src/main/webapp/resources/css/footer.css
+++ b/mbs/src/main/webapp/resources/css/footer.css
@@ -31,8 +31,8 @@
 
 .footer {
 	/* position: absolute;
-	bottom: 0;
-	overflow: hidden; */
+	bottom: 0; */
+	overflow: hidden;
 	padding: 45px 0 35px;
 	width: 100%;
 	font-size: 12px;
