--- a/mbs/.settings/org.eclipse.wst.common.component
+++ b/mbs/.settings/org.eclipse.wst.common.component
@@ -13,8 +13,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
         		
         <property name="java-output-path" value="target/classes"/>
-                
-        <property name="context-root" value="mvc"/>
+        <property name="context-root" value="mbs"/>
         	
     </wb-module>
     
