--- a/mbs/src/main/webapp/resources/css/card.css
+++ b/mbs/src/main/webapp/resources/css/card.css
@@ -8,16 +8,16 @@
 
 .btn-primary:hover,
 .btn-primary:focus {
-    background-color: #108d6f;
-    border-color: #108d6f;
+    background-color: #286090;
+    border-color: #204d74;
     box-shadow: none;
     outline: none;
 }
 
 .btn-primary {
     color: #fff;
-    background-color: #007b5e;
-    border-color: #007b5e;
+    background-color: #337ab7;
+    border-color: #2e6da4;
 }
 
 section {
